# dtpdemo

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: qodana.yml
cool/: asgi.py  settings.py  urls.py  wsgi.py
ide_scripts/actions/: demo.json  js.js  js.json  py.json  py.py
jinja2/: demo.jinja2  demo.pyi
jinja2/import_set/: demo_macro.jinja2  main.jinja2  main.pyi
templates/: demo.html  global.pyi  hello.html  hello.pyi
templates/field/: field_not_exists.html  field_not_exists.pyi
templates/for_tag/: dict_for_in.html  dict_for_in.pyi  list_for_in.pyi  simple_for_in.html  tuple_for_in.html
templates/i18n/: blocktrans.html  trans.html
templates/include_tag/: include_1.html  include_2.html  include_code_complete.html  include_demo.html  include_hello.html
templates/no_pyi/: no_pyi.html
templates/py_builtin/: builtin.html  builtin.pyi
templates/tag_for/: dict_for_in.html  dict_for_in.pyi  list_for_in.html  loop_dict.html  loop_dict.pyi  loop_for.html  loop_for.pyi  simple_for_in.pyi  tuple_for_in.pyi
templates/tag_include/: include_1.html  include_2.html  include_code_complete.html  include_code_complete.pyi
templates/tag_url/: url.html  url.pyi
templates/tag_with/: with_include.html
templates/with_tag/: with_simple_form.html  with_simple_form.pyi
web/: models.py  views.py
