[tool.poetry]
name = "cool"
version = "0.1.0"
description = ""
authors = ["valbendan <valbendan@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

django = ">=4.0,<4.1"

[tool.poetry.dev-dependencies]
black = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
